--- a/css/site.css
+++ b/css/site.css
@@ -1,19 +1,46 @@
 main>.container {
-    padding: 60px 15px 0;
+    padding: 80px 15px 20px;
 }
 
-.text-LinkedInBlue {
+.even {
+    font-weight: bold
+}
+
+.iconify {
+    width: 3rem;
+    height: 3rem;
+    margin: 1em;
+}
+
+.color-LinkedInBlue {
     color: #1163bf
 }
 
-.text-GitHubPurple {
-    color: #7a319a
-}
-
-.text-YouTubeRed {
+.color-YouTubeRed {
     color: #ff0a03
 }
 
-.text-TwitterBlue {
+.color-TwitterBlue {
     color: #1da1f3
+}
+
+.color-gitHubPurple {
+    color: #7a319a
+}
+
+.color-CoderFoundryOrange {
+    color: #ff993b
+}
+
+.color-JavaScriptYellow {
+    color: #f7df1e
+}
+
+.background-color {
+    background-color: #f7df1e;
+}
+
+.background-color:hover {
+    background-color: black;
+    color: #f7df1e;
 }
