--- a/css/site.css
+++ b/css/site.css
@@ -12,35 +12,20 @@ main>.container {
     margin: 1em;
 }
 
-.color-LinkedInBlue {
-    color: #1163bf
-}
-
-.color-YouTubeRed {
-    color: #ff0a03
-}
-
-.color-TwitterBlue {
-    color: #1da1f3
-}
-
-.color-gitHubPurple {
-    color: #7a319a
-}
-
-.color-CoderFoundryOrange {
-    color: #ff993b
-}
-
-.color-JavaScriptYellow {
-    color: #f7df1e
+.checklist>li i {
+    color: #677718
 }
 
 .background-color {
-    background-color: #f7df1e;
+    background-color: #677718;
+    color: white
 }
 
 .background-color:hover {
-    background-color: black;
-    color: #f7df1e;
+    background-color: #b2b57a;
+    color: black;
+}
+
+.color-EvilOliveGreen {
+    color: #677718
 }
