--- a/css/site.css
+++ b/css/site.css
@@ -29,3 +29,46 @@ main>.container {
 .color-EvilOliveGreen {
     color: #677718
 }
+
+footer {
+    background-color: var(--dark-color);
+}
+
+footer .social>a {
+    color: var(--white-color);
+}
+
+footer .linkedin>a:hover {
+    opacity: .9;
+    color: #1163bf;
+}
+
+footer .github>a:hover {
+    opacity: .9;
+    color: #7a319a;
+}
+
+footer .twitter>a:hover {
+    opacity: .9;
+    color: #1da1f3;
+}
+
+*/ .color-CoderFoundryOrange {
+    color: #ff993b
+}
+
+.color-JavaScriptYellow {
+    color: #f7df1e
+}
+
+.color-BootStrapPurple {
+    color: #7952b3
+}
+
+.color-HTMLOrange {
+    color: #e96228
+}
+
+.color-CSSBlue {
+    color: #2a93e7
+}
